samples/_failures_safe/1761164366_131528_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1433e861.c: In function ‘determinant_matrix’:
./samples/SAFE/__tmp_1433e861.c:150:13: error: expected declaration or statement at end of input
  150 |             for (int j = 0; j < size; j++) {
      |             ^~~
./samples/SAFE/__tmp_1433e861.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1433e861.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1433e861.c:150:13: error: expected declaration or statement at end of input
